2007-11-06  Geoff Norton  <gnorton@novell.com>

	* ListenerAsyncResult.cs: If the HttpListener has an authentication
	scheme, the user should be presented with a 401 without calling the 
	callback.

2007-11-04  Miguel de Icaza  <miguel@novell.com>

	* FtpWebRequest.cs (GetResponseStatus): Fix this routine
	propertly, refactor, and make it follow Mono coding conventions.

2007-10-30  Jerome Haltom  (wasabi@larvalstage.net)

	* FtpWebRequest.cs: adds support for ftp multiline results, fixes
	#333978

2007-10-27  Miguel de Icaza  <miguel@novell.com>

	* HttpListener.cs: Remove more trigger-happy disposed=true from
	the code;   We should only dispose when the Dispose method is
	actually called.   Not before.  

	Fixes #337371

	*  HttpListener.cs (Close): Closing does not mean dispose the
	object.   This allows Start/Stop/Start to be called as many times
	as desired.

	Fixes #337368

2007-10-15  Gert Driesen  <drieseng@users.sourceforge.net>

	* FtpWebRequest.cs: Added support for DELETE.

2007-10-15  Gert Driesen  <drieseng@users.sourceforge.net>

	* WebRequest.cs: Changed serialization ctor to throw NIE on 1.0
	profile. Cache default proxy, but still allow it to be explicitly set
	to null. Removed commented code.

2007-10-14 Gonzalo Paniagua Javier <gonzalo.mono@gmail.com>

	* WebRequest.cs: DefaultWebProxy allows a null value. Fixes bug #323668.

2007-09-30  Gert Driesen  <drieseng@users.sourceforge.net>

	* HttpListenerRequest.cs: Do not store 'method' in upper case, but
	instead use case-insensitive comparison.

2007-09-30  Gert Driesen  <drieseng@users.sourceforge.net>

	* HttpListenerRequest.cs: Removed dead code. USe String.Length to
	check for zero-length string. Use instance field for is_chunked, and
	also set it for GET/HEAD/DELETE. Fixed HasEntityBody to return true
	when Content-Length > 0, or Transfer-Encoding is chunked.

2007-09-28  Marek Habersack  <mhabersack@novell.com>

	* HttpListenerRequest.cs: make sure 'method' is always stored in
	upper case.