@@ -82,11 +82,12 @@ namespace System.Net {
 				if (handle != null)
 					handle.Set ();
 
-				if (context.Listener.AuthenticationSchemes != AuthenticationSchemes.Anonymous && context.Request.Headers ["Authorization"] == null) {
+				if ((context.Listener.AuthenticationSchemes == AuthenticationSchemes.Basic || context.Listener.AuthenticationSchemes == AuthenticationSchemes.Negotiate) && context.Request.Headers ["Authorization"] == null) {
 					context.Listener.EndGetContext (this);
 					context.Response.StatusCode = 401;
+					context.Response.Headers ["WWW-Authenticate"] = AuthenticationSchemes.Basic + "realm=\"\"";
 					context.Response.OutputStream.Close ();
-					context.Listener.BeginGetContext (cb, this); 
+					context.Listener.BeginGetContext (cb, state);
 				} else if (cb != null)
 					ThreadPool.QueueUserWorkItem (InvokeCallback, this);
 			}
